--- a/src/assets/scss/_housesForRent.scss
+++ b/src/assets/scss/_housesForRent.scss
@@ -125,7 +125,7 @@
   left: 0;
   padding-top: 70px;
   z-index: 10;
-  background-color: $bg-colour-6;
+  background-color: $light-background-colour;
   transform: translateY(-100%);
   transition: transform 0.3s ease-out;
 }
