--- a/src/assets/scss/_payment.scss
+++ b/src/assets/scss/_payment.scss
@@ -318,7 +318,7 @@
 .faq-pricing-section {
   padding-top: $medium-section-spacing;
   padding-bottom: $large-section-spacing;
-  background-color: $bg-colour-6;
+  background-color: $light-background-colour;
 
   h3 {
     text-align: center;
