--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -19,6 +19,7 @@
  @import "auth";
  @import "profileSettings";
  @import "landlordProfile";
+ @import "chat";
  @import "policy";
  @import "payment";
  @import "muiOverride";
