feat: Add Message page

--- a/src/assets/scss/style.css
+++ b/src/assets/scss/style.css
@@ -9959,7 +9959,7 @@ h3 {
   line-height: 20px;
 }
 
-.pricing-header .pricing-text, .plan-price .price, .plan-type .type, .sidebar-option-wrapper li .text, .landlord-card .name {
+.pricing-header .pricing-text, .plan-price .price, .plan-type .type, .sidebar-option-wrapper li .text, .landlord-card .name, .chat-info .name {
   font-size: 16px;
   line-height: 22px;
 }
@@ -10130,7 +10130,7 @@ h1 {
   line-height: 20px;
 }
 
-.pricing-header .pricing-text, .plan-price .price, .plan-type .type, .sidebar-option-wrapper li .text, .landlord-card .name {
+.pricing-header .pricing-text, .plan-price .price, .plan-type .type, .sidebar-option-wrapper li .text, .landlord-card .name, .chat-info .name {
   font-size: 16px;
   line-height: 22px;
 }
@@ -10248,7 +10248,7 @@ h1 {
   line-height: 20px;
 }
 
-.pricing-header .pricing-text, .plan-price .price, .plan-type .type, .sidebar-option-wrapper li .text, .landlord-card .name {
+.pricing-header .pricing-text, .plan-price .price, .plan-type .type, .sidebar-option-wrapper li .text, .landlord-card .name, .chat-info .name {
   font-size: 16px;
   line-height: 22px;
 }
@@ -10767,7 +10767,7 @@ html {
   line-height: 20px;
 }
 
-.pricing-header .pricing-text, .plan-price .price, .plan-type .type, .sidebar-option-wrapper li .text, .landlord-card .name {
+.pricing-header .pricing-text, .plan-price .price, .plan-type .type, .sidebar-option-wrapper li .text, .landlord-card .name, .chat-info .name {
   font-size: 16px;
   line-height: 22px;
 }
@@ -10940,7 +10940,7 @@ html {
   line-height: 20px;
 }
 
-.pricing-header .pricing-text, .plan-price .price, .plan-type .type, .sidebar-option-wrapper li .text, .landlord-card .name {
+.pricing-header .pricing-text, .plan-price .price, .plan-type .type, .sidebar-option-wrapper li .text, .landlord-card .name, .chat-info .name {
   font-size: 16px;
   line-height: 22px;
 }
@@ -11058,7 +11058,7 @@ html {
   line-height: 20px;
 }
 
-.pricing-header .pricing-text, .plan-price .price, .plan-type .type, .sidebar-option-wrapper li .text, .landlord-card .name {
+.pricing-header .pricing-text, .plan-price .price, .plan-type .type, .sidebar-option-wrapper li .text, .landlord-card .name, .chat-info .name {
   font-size: 16px;
   line-height: 22px;
 }
@@ -11493,7 +11493,7 @@ html {
   line-height: 20px;
 }
 
-.pricing-header .pricing-text, .plan-price .price, .plan-type .type, .sidebar-option-wrapper li .text, .landlord-card .name {
+.pricing-header .pricing-text, .plan-price .price, .plan-type .type, .sidebar-option-wrapper li .text, .landlord-card .name, .chat-info .name {
   font-size: 16px;
   line-height: 22px;
 }
@@ -11906,7 +11906,7 @@ html {
   line-height: 20px;
 }
 
-.pricing-header .pricing-text, .plan-price .price, .plan-type .type, .sidebar-option-wrapper li .text, .landlord-card .name {
+.pricing-header .pricing-text, .plan-price .price, .plan-type .type, .sidebar-option-wrapper li .text, .landlord-card .name, .chat-info .name {
   font-size: 16px;
   line-height: 22px;
 }
@@ -12541,7 +12541,7 @@ html {
   line-height: 20px;
 }
 
-.pricing-header .pricing-text, .plan-price .price, .plan-type .type, .sidebar-option-wrapper li .text, .landlord-card .name {
+.pricing-header .pricing-text, .plan-price .price, .plan-type .type, .sidebar-option-wrapper li .text, .landlord-card .name, .chat-info .name {
   font-size: 16px;
   line-height: 22px;
 }
@@ -13441,7 +13441,7 @@ html {
   line-height: 20px;
 }
 
-.pricing-header .pricing-text, .plan-price .price, .plan-type .type, .sidebar-option-wrapper li .text, .landlord-card .name {
+.pricing-header .pricing-text, .plan-price .price, .plan-type .type, .sidebar-option-wrapper li .text, .landlord-card .name, .chat-info .name {
   font-size: 16px;
   line-height: 22px;
 }
@@ -13744,7 +13744,7 @@ html {
   line-height: 20px;
 }
 
-.pricing-header .pricing-text, .plan-price .price, .plan-type .type, .sidebar-option-wrapper li .text, .landlord-card .name {
+.pricing-header .pricing-text, .plan-price .price, .plan-type .type, .sidebar-option-wrapper li .text, .landlord-card .name, .chat-info .name {
   font-size: 16px;
   line-height: 22px;
 }
@@ -14057,7 +14057,7 @@ html {
   line-height: 20px;
 }
 
-.pricing-header .pricing-text, .plan-price .price, .plan-type .type, .sidebar-option-wrapper li .text, .landlord-card .name {
+.pricing-header .pricing-text, .plan-price .price, .plan-type .type, .sidebar-option-wrapper li .text, .landlord-card .name, .chat-info .name {
   font-size: 16px;
   line-height: 22px;
 }
@@ -14249,7 +14249,7 @@ html {
   line-height: 20px;
 }
 
-.pricing-header .pricing-text, .plan-price .price, .plan-type .type, .sidebar-option-wrapper li .text, .landlord-card .name {
+.pricing-header .pricing-text, .plan-price .price, .plan-type .type, .sidebar-option-wrapper li .text, .landlord-card .name, .chat-info .name {
   font-size: 16px;
   line-height: 22px;
 }
@@ -14437,7 +14437,7 @@ html {
   line-height: 20px;
 }
 
-.pricing-header .pricing-text, .plan-price .price, .plan-type .type, .sidebar-option-wrapper li .text, .landlord-card .name {
+.pricing-header .pricing-text, .plan-price .price, .plan-type .type, .sidebar-option-wrapper li .text, .landlord-card .name, .chat-info .name {
   font-size: 16px;
   line-height: 22px;
 }
@@ -14500,6 +14500,62 @@ html {
   background-color: #9c94b6;
 }
 
+.message-page {
+  padding-top: 150px;
+  padding-bottom: 150px;
+  background-color: #f4f5f7;
+  height: 100%;
+  min-height: 100vh;
+  width: 100%;
+}
+
+.chat-wrapper {
+  width: 100%;
+  background-color: white;
+  padding: 25px 40px;
+  border: 1px solid #e9eaef;
+}
+.chat-wrapper:hover {
+  background-color: #f4f5f7;
+  transition: background-color 0.3s ease-out;
+}
+.chat-wrapper .message-date {
+  margin: 5px 0;
+}
+
+.owner-of-chat {
+  position: relative;
+}
+.owner-of-chat .landlord-photo-wrapper {
+  width: 50px;
+  height: 50px;
+  position: absolute;
+}
+
+.chat-info {
+  margin-left: 60px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+.chat-info .name {
+  display: block;
+  font-weight: 700;
+  font-family: proxima-nova-regular, sans-serif;
+  color: #7c54c1;
+}
+.chat-info .address {
+  cursor: pointer;
+  display: block;
+  margin-top: 10px;
+  font-size: 14px;
+  line-height: 20px;
+  color: #9c99b6;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
 .message-scroll-area {
   padding-top: 150px;
   padding-bottom: 150px;
@@ -14526,14 +14582,14 @@ html {
   color: #7c54c1;
 }
 .landlord-card .link-to-apartment {
+  cursor: pointer;
   display: block;
   margin-top: 30px;
   font-size: 14px;
   line-height: 20px;
   color: #9c99b6;
 }
-
-.landlord-photo-wrapper {
+.landlord-card .landlord-photo-wrapper {
   width: 50px;
   height: 50px;
 }
@@ -14631,8 +14687,22 @@ html {
   }
 }
 @media (max-width: 767.98px) {
+  .message-page {
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
+
   .send-btn {
     width: 90px;
+  }
+
+  .owner-of-chat {
+    margin: 15px 0;
+  }
+  .owner-of-chat .landlord-photo-wrapper {
+    width: 40px;
+    height: 40px;
+    position: absolute;
   }
 }
 .header-btn-container, .header-input, .rental-steps-container .switch-btn, .rental-steps-container .switch, .rent-list-btn, .nav-item-container, .nav-items, .list-property, .renting-header .switch, .renting-header .switch-btn {
@@ -14690,7 +14760,7 @@ html {
   line-height: 20px;
 }
 
-.pricing-header .pricing-text, .plan-price .price, .plan-type .type, .sidebar-option-wrapper li .text, .landlord-card .name {
+.pricing-header .pricing-text, .plan-price .price, .plan-type .type, .sidebar-option-wrapper li .text, .chat-info .name, .landlord-card .name {
   font-size: 16px;
   line-height: 22px;
 }
@@ -14846,7 +14916,7 @@ html {
   line-height: 20px;
 }
 
-.pricing-header .pricing-text, .plan-price .price, .plan-type .type, .sidebar-option-wrapper li .text, .landlord-card .name {
+.pricing-header .pricing-text, .plan-price .price, .plan-type .type, .sidebar-option-wrapper li .text, .chat-info .name, .landlord-card .name {
   font-size: 16px;
   line-height: 22px;
 }
@@ -15278,7 +15348,7 @@ html {
   line-height: 20px;
 }
 
-.landlord-card .name, .sidebar-option-wrapper li .text, .plan-type .type, .plan-price .price, .pricing-header .pricing-text {
+.chat-info .name, .landlord-card .name, .sidebar-option-wrapper li .text, .plan-type .type, .plan-price .price, .pricing-header .pricing-text {
   font-size: 16px;
   line-height: 22px;
 }
@@ -15372,6 +15442,10 @@ html {
   font-family: proxima-nova-regular, sans-serif;
 }
 
+.MuiMenu-list {
+  height: 190px;
+}
+
 .header-btn-container, .header-input, .rental-steps-container .switch-btn, .rental-steps-container .switch, .rent-list-btn, .nav-item-container, .nav-items, .list-property, .renting-header .switch, .renting-header .switch-btn {
   display: flex;
   align-items: center;
@@ -15427,7 +15501,7 @@ html {
   line-height: 20px;
 }
 
-.landlord-card .name, .sidebar-option-wrapper li .text, .plan-type .type, .plan-price .price, .pricing-header .pricing-text {
+.chat-info .name, .landlord-card .name, .sidebar-option-wrapper li .text, .plan-type .type, .plan-price .price, .pricing-header .pricing-text {
   font-size: 16px;
   line-height: 22px;
 }
@@ -15545,7 +15619,7 @@ html {
   line-height: 20px;
 }
 
-.landlord-card .name, .sidebar-option-wrapper li .text, .plan-type .type, .plan-price .price, .pricing-header .pricing-text {
+.chat-info .name, .landlord-card .name, .sidebar-option-wrapper li .text, .plan-type .type, .plan-price .price, .pricing-header .pricing-text {
   font-size: 16px;
   line-height: 22px;
 }
