--- a/src/assets/scss/_chat.scss
+++ b/src/assets/scss/_chat.scss
@@ -1,15 +1,69 @@
 @import "variables";
+// Message List Page
+.message-page {
+  padding-top: $large-section-spacing;
+  padding-bottom: $large-section-spacing;
+  background-color: $bg-colour-5;
+  height: 100%;
+  min-height: 100vh;
+  width: 100%;
+}
+.chat-wrapper {
+  width: 100%;
+  background-color: white;
+  padding: 25px 40px;
+  border: 1px solid $light-border;
 
+  &:hover {
+    background-color: $bg-colour-5;
+    transition: background-color 0.3s ease-out;
+  }
+
+  .message-date {
+    margin: 5px 0;
+  }
+}
+.owner-of-chat {
+  position: relative;
+  .landlord-photo-wrapper {
+    width: 50px;
+    height: 50px;
+    position: absolute;
+  }
+}
+
+.chat-info {
+  margin-left: 60px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  .name {
+    display: block;
+    @extend %small-font-style;
+    font-weight: $font-weight;
+    font-family: $regular-font-family;
+    color: $deep-purple;
+  }
+  .address {
+    cursor: pointer;
+    display: block;
+    margin-top: 10px;
+    font-size: $smallest-font-size;
+    line-height: $smallest-line-height;
+    color: $light-text-colour;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+}
+
+// Chat UI Page
 .message-scroll-area {
   padding-top: $large-section-spacing;
   padding-bottom: $large-section-spacing;
-  //display: flex;
   height: 100%;
   width: 100%;
   max-height: 100%;
-  //flex-direction: column;
-  //flex: 1 1 auto;
-  //overflow: auto;
   -webkit-overflow-scrolling: touch;
 }
 
@@ -31,18 +85,19 @@
     color: $deep-purple;
   }
   .link-to-apartment {
+    cursor: pointer;
     display: block;
     margin-top: 30px;
     font-size: $smallest-font-size;
     line-height: $smallest-line-height;
     color: $light-text-colour;
   }
+  .landlord-photo-wrapper {
+    width: 50px;
+    height: 50px;
+  }
 }
 
-.landlord-photo-wrapper {
-  width: 50px;
-  height: 50px;
-}
 
 .message-box-container {
   padding-top: 30px;
@@ -87,7 +142,7 @@
   padding: 25px;
   word-break: break-all;
   white-space: pre-wrap;
-  border: 1px solid #e9eaef;
+  border: 1px solid $light-border;
   border-radius: 6px;
 }
 .my-message {
@@ -108,7 +163,6 @@
 }
 
 .message-date {
-  //@extend %smallest-font-style;
   font-size: 12px;
   display: block;
   margin: 15px 0;
@@ -137,7 +191,19 @@
 }
 
 @media (max-width: 767.98px) {
+  .message-page {
+    padding-top: $medium-section-spacing;
+    padding-bottom: $medium-section-spacing;
+  }
   .send-btn {
     width: 90px;
+  }
+  .owner-of-chat {
+    margin: 15px 0;
+    .landlord-photo-wrapper {
+      width: 40px;
+      height: 40px;
+      position: absolute;
+    }
   }
 }
