--- a/src/assets/scss/_houseDetails.scss
+++ b/src/assets/scss/_houseDetails.scss
@@ -386,13 +386,7 @@
 .amenities-icon-wrapper {
   display: flex;
   align-items: center;
-  //.svg-icon {
-  //  width: 24px;
-  //  height: 24px;
-  //  display: block;
-  //  background-position: 50%;
-  //  background-repeat: no-repeat;
-  //}
+  margin: 10px 0;
 
   svg {
     width: 24px;
